# Robotics-and-Autonomous-System-Project

./: .gitignore  README.md  README.test.md.toc.2018-10-01_215355
bagfiles/: dd2425_ht14_G9_M3.bag  dd2425_ht14_Gx_MY.bag  dd2425_ht14_Gx_MY8.bag  dd2425_ht14_Gx_MY9.bag  dd2425_ht18_G9_phase1.bag
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/arduino_servo_control/: SetServoAnglesRequest.h  SetServoAnglesResponse.h
devel/include/gp9_path_planning/: PathList.h  Path_list.h
devel/include/phidgets/: interface_kit.h  interface_kitRequest.h  interface_kitResponse.h  interface_kit_params.h  lidar_controlRequest.h  lidar_controlResponse.h  motor_encoder.h  motor_params.h
devel/include/ras_lab1_msgs/: ADConverter.h  BatteryStatus.h  ControllerParams.h  Encoders.h  Odometry.h  PWM.h  ServoMotors.h  WheelAngularVelocities.h
devel/include/ras_msgs/: RAS_Evidence.h
devel/include/realsense_camera/: CameraConfigurationRequest.h  CameraConfigurationResponse.h  ForcePowerRequest.h  ForcePowerResponse.h  GetIMUInfoRequest.h  GetIMUInfoResponse.h  IMUInfo.h  IsPoweredRequest.h  IsPoweredResponse.h  SetPowerRequest.h  SetPowerResponse.h  f200_paramsConfig.h  r200_paramsConfig.h  sr300_paramsConfig.h  zr300_paramsConfig.h
devel/include/uarm/: AttachDetachResponse.h  MoveTo.h  MoveToJoints.h  MoveToJointsResponse.h  MoveToResponse.h  Pump.h  PumpRequest.h
devel/lib/gp9_brain/: state_machine  state_machine2
devel/lib/gp9_camera/: barrier_detection  object_detection  object_detection_haar
devel/lib/gp9_localization/: intersection  particle_filter
devel/lib/gp9_mapping/: mapper
devel/lib/gp9_motor_controller/: motor_controller  velocity_controller
devel/lib/gp9_objects_detection/: calibration_util  objects_detection
devel/lib/gp9_odometry/: odometry  tf_boardcaster  tf_broadcaster  tf_listener  tf_listener_robot
devel/lib/gp9_path_follower/: grab  path_follower  rotation
devel/lib/gp9_realsense/: haar_detect_image  haar_detect_video  object_detection
devel/lib/motor_controller/: motor_controller  velocity_controller
devel/lib/phidgets/: interface_kit  interface_kit_client  motor
devel/lib/pkgconfig/: arduino_servo_control.pc  gp9_brain.pc  gp9_camera.pc  gp9_localization.pc  gp9_map_representation.pc  gp9_mapping.pc  gp9_motor_controller.pc  gp9_objects_detection.pc  gp9_odometry.pc  gp9_path_follower.pc  gp9_path_planning.pc  gp9_realsense.pc  (+21 more)
install/: .rosinstall  setup.sh
install/share/ras_espeak/: package.xml
install/share/ras_espeak/cmake/: ras_espeakConfig.cmake
install/share/ras_lab1/: package.xml
install/share/ras_lab1_msgs/: package.xml
install/share/ras_lab1_msgs/cmake/: ras_lab1_msgs-msg-extras.cmake  ras_lab1_msgs-msg-paths.cmake  ras_lab1_msgsConfig.cmake
install/share/ras_lab1_msgs/msg/: ADConverter.msg  BatteryStatus.msg  ControllerParams.msg  Encoders.msg  PWM.msg  ServoMotors.msg  WheelAngularVelocities.msg
install/share/ras_maze_distance_sensor/: package.xml
install/share/ras_maze_distance_sensor/cmake/: ras_maze_distance_sensorConfig.cmake
install/share/ras_maze_map/: package.xml
install/share/ras_maze_map/cmake/: ras_maze_mapConfig.cmake
install/share/ras_msgs/: package.xml
install/share/ras_msgs/cmake/: ras_msgs-msg-paths.cmake  ras_msgsConfig.cmake
install/share/ras_msgs/msg/: RAS_Evidence.msg
motor_controller/: CMakeLists.txt
src/: .rosinstall  .rosinstall.bak  CMakeLists.txt  params.srv  paramserverfixed.txt
src/gp9_brain/: CMakeLists.txt
src/gp9_camera/: CMakeLists.txt  package.xml
src/gp9_localization/: CMakeLists.txt
src/gp9_localization/include/gp9_localization/: particle_filter.h
src/gp9_localization/src/: intersection.cpp  maze.txt  particle_filter.cpp
src/gp9_map_representation/: CMakeLists.txt
src/gp9_mapping/: CMakeLists.txt  package.xml
src/gp9_motor_controller/: CMakeLists.txt  package.xml
src/gp9_motor_controller/include/gp9_motor_controller/: motor_controller.h  velocity_controller.h
src/gp9_motor_controller/launch/: motor_controller.launch  phidgets.launch
src/gp9_motor_controller/src/: motor_controller.cpp  velocity_controller.cpp
src/gp9_object_detection/: CMakeLists.txt  package.xml
src/gp9_objects_detection/: CMakeLists.txt  package.xml
src/gp9_objects_detection/include/gp9_objects_detection/: calibration_util.h  detection_util.h  objects_detection.h
src/gp9_objects_detection/launch/: objects_controller.launch
src/gp9_objects_detection/scripts/: Targetclassify.py  collectTrainingData.py  detectedPath.py  detectedPath.txt  ras_test.py  record.py  targetClassification.py
src/gp9_objects_detection/src/: calibration_util.cpp  cascade2.xml  cascade_battery.xml  cascade_new_mask.xml  cascade_small_mask.xml  objects_detection.cpp
src/gp9_objects_detection/tf_files/: labels_color.txt  labels_shape.txt  retrained_labels.txt  train.md
src/gp9_objects_detection/tf_files/models/mobilenet_v1_0.50_128/: quantized_graph.pb
src/gp9_odometry/: CMakeLists.txt  odometry.cpp  odometry.h  package.xml
src/gp9_odometry/include/gp9_odometry/: odometry.h  tf_boardcaster.h  tf_listener_robot.h
src/gp9_odometry/launch/: motor_controller.launch
src/gp9_odometry/src/: .odometry.cpp.swp  odometry.cpp  tf_boardcaster.cpp  tf_listener_robot.cpp
src/gp9_path_follower/: CMakeLists.txt  test_commands.txt
src/gp9_path_follower/launch/: path_execution.launch
src/gp9_path_follower/scripts/: execute_path.py
src/gp9_path_follower/src/: grab.cpp  path_follower.cpp  path_follower.cpp.old  path_follower_functioning.cpp  rotation.cpp
src/gp9_path_planning/: CMakeLists.txt  package.xml
src/gp9_realsense/: CMakeLists.txt  package.xml
src/gp9_realsense/include/gp9_realsense/: object_detection.h
src/gp9_realsense/src/: cascade.xml  haar_detect_image.cpp  haar_detect_video.cpp  object_detection.cpp
src/key_teleop/: CMakeLists.txt
src/map_representation/: CMakeLists.txt  package.xml
src/motor_controller/: package.xml
src/test/: CMakeLists.txt
src/transforms/: CMakeLists.txt
src/trial/: CMakeLists.txt  package.xml
src/trial_rviz/: CMakeLists.txt
(+385 files in other folders)
