<package>
 <name>ras_lab1_msgs</name>
  <version>0.1.0</version>
  <description>
    This package contains message (.msg) definitions for interfacing via ROS with motors and sensors on the virtual Kobuki.
  </description>
  <license>BSD</license>

  <author email="germain.haessig@ens-cachan.fr">Germain Haessig</author>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
